--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
-    <body>
 
+<head></head>
 
-        <script src="main.js"></script>
-    </body>
+<body>
+    <canvas id="canvas" width="500px" height="400px">
+    </canvas>
+    <script src="main.js"></script>
+</body>
+
 </html>
