--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
     <canvas id="canvas" width="500px" height="400px">
     </canvas>
+    <script src="astar.js"></script>
     <script src="main.js"></script>
 </body>
 
